# Nemotron

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/training/: add-recipe.md  design.md  run-recipe.md
src/nemotron/: __init__.py  artifact.py  trackers.py
src/nemotron/recipes/: __init__.py  hello.py
src/nemotron/recipes/chipnemo/: README.md
src/nemotron/recipes/chipnemo/stage0_pretrain/: README.md
src/nemotron/recipes/chipnemo/stage1_sft/: README.md
src/nemotron/recipes/chipnemo/stage2_reasoning/: README.md
src/nemotron/recipes/nano2/: README.md
src/nemotron/recipes/nano2/stage0_pretrain/: README.md
src/nemotron/recipes/nano2/stage1_instruction_tuning/: README.md
src/nemotron/recipes/nano2/stage2_alignment/: README.md
tests/: test_artifact.py
usage-cookbook/: README.md
usage-cookbook/Nemotron-3-Nano/: trtllm_cookbook.ipynb  vllm_cookbook.ipynb
use-case-examples/: README.md
use-case-examples/nemotron-voice-rag-agent-example/: README.md  pyproject.toml
