[project]
name = "nemotron-family-multimodal-rag-agent"
version = "0.1.0"
description = "Voice-Powered RAG Agent with NVIDIA Nemotron Models"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core LangChain and LangGraph
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-community",
    # Vector store
    "faiss-cpu",
    # NVIDIA API clients
    "openai",
    "langchain-nvidia-ai-endpoints",
    # Image processing
    "pillow",
    "requests",
    # Transformers for self-hosted models
    "transformers>=4.47.1,<5.0.0",
    "torch>=2.0.0",
    "accelerate",
    # Template engine for safety prompts
    "jinja2",
    # Jupyter for running the tutorial
    "jupyter",
    "ipywidgets",
    # Utilities
    "numpy",
    "torchvision>=0.24.1",
    "nemo_toolkit[asr]>=2.0.0",
    "Cython",
    "packaging",
    "ipywebrtc>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nemotron_family_multimodal_rag_agent"]
